# oracle-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README-zh.md  README.md  main.py  pyproject.toml
.github/workflows/: docker-build-publish.yml  docker-build.yml  docker-publish.yml  tests.yml
db_context/: __init__.py  database.py  models.py  utils.py
db_context/schema/: formatter.py  manager.py
test/db/: .env.example  README.md  docker-compose.yml
test/db/init/: 01_setup.sql
tests/: conftest.py
tests/integration/: test_formatting_and_sanitization.py  test_query_result_formatting.py  test_read_only_and_write_modes.py  test_related_tables.py  test_security_and_explain.py
tests/unit/: test_formatter_output.py  test_sql_classification.py  test_wrap_untrusted.py
